humming bird pic

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 <Hr>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quas, provident error accusamus deleniti recusandae nihil, distinctio unde facilis exercitationem soluta aliquid veritatis! Tempore veritatis debitis, odit corrupti totam quibusdam!</p>
 
-<br>
 <br> 
 <h3>This one is even smaller!</h3> 
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur placeat id sint rem laudantium at aliquid pariatur corrupti? Suscipit cum natus adipisci asperiores recusandae soluta. Eveniet possimus ratione omnis aliquid.</p>
 
+<br>
+
 <h2>Look! a hummingbird!</h2>
 <a href="https://w7.pngwing.com/pngs/626/603/png-transparent-hummingbird-hummingbird-animals-presentation-fauna-thumbnail.png">
-    <img src="../htmlCssProject/png-transparent-hummingbird-hummingbird-animals-presentation-fauna-thumbnail" alt="Humming Bird!" style="border-radius: 150px;" height="300" width="300"> 
+    <img src="../humingbirdasset/Hummingbird.png" alt="Humming Bird!" style="border-radius: 150px;" height="300" width="300"> 
 </a>
 
 </body>
